--- a/React/adopt-me-site/package.json
+++ b/React/adopt-me-site/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.5.0",
     "prettier": "^1.18.2"
   }
 }
